Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37200

Cursor blink rate does not respect system settings

    XMLWordPrintable

Details

    Description

      On Windows 7 x64 the cursor blink rate in the source code editor is notably higher than in other applications and keyboard properties. This was not the case with QtCreator based on Qt 4.x.

      The cursor should be displayed according to the system settings.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              frederik Frederik Gladhorn
              lastique Andrey Semashev
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes