Fix cursor blink time in Windows

In Qt 4 there is a factor of 2 in qapplication_win.cpp,
this got lost, so all our cursors were blinking twice as
fast.

Task-number: QTBUG-37200

Change-Id: I11ce61c51279d9ceb8bc9ba01c1bb9640a31ade8
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>